--- a/Archer Capital/css/style.css
+++ b/Archer Capital/css/style.css
@@ -31,7 +31,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Nirmala UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
 
 *,
@@ -51,7 +51,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Nirmala UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -8045,10 +8045,10 @@ h1, h2, h3, h4, h5,
     .social-media p a span {
       color: #fff; }
     .social-media p a:hover {
-      background: #589167;
-      border-color: #589167; }
+      background: #233759;
+      border-color: #233759; }
       .social-media p a:hover span {
-        color: #fff; }
+        color: #233759; }
 
 .ftco-navbar-light {
   background: transparent !important;
@@ -8080,7 +8080,7 @@ h1, h2, h3, h4, h5,
     font-weight: 600;
     opacity: 1 !important; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-      color: #589167; }
+      color: #ccae6a; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
         padding-left: 0;
@@ -8135,10 +8135,10 @@ h1, h2, h3, h4, h5,
     border: 1px solid #01d28e;
     background: #01d28e !important; }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #589167; }
+    color: #ccae6a; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-      color: #589167; } }
+      color: #ccae6a; } }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -8149,7 +8149,7 @@ h1, h2, h3, h4, h5,
     letter-spacing: .1em; }
     .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
       text-decoration: none;
-      color: #589167;
+      color: #ccae6a;
       outline: none !important; }
   .ftco-navbar-light.scrolled {
     position: fixed;
@@ -8166,7 +8166,7 @@ h1, h2, h3, h4, h5,
         padding-right: 0 !important;
         padding-bottom: 0 !important; } }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #589167 !important; }
+      color: #ccae6a !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
       background: #589167;
@@ -8184,7 +8184,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color: #fff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-      border-color: #589167; }
+      border-color: #ccae6a; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .navbar-nav {
         background: none;
@@ -8205,7 +8205,7 @@ h1, h2, h3, h4, h5,
       padding-bottom: 0.9rem !important;
       color: #000000 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #589167 !important; }
+        color: #ccae6a !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -8245,14 +8245,14 @@ h1, h2, h3, h4, h5,
       bottom: 0;
       content: '';
       opacity: 1;
-      background: #589167;
-      background: -moz-linear-gradient(45deg, #589167 0%, rgba(88, 145, 103, 0) 100%);
-      background: -webkit-gradient(left bottom, right top, color-stop(0%, #589167), color-stop(100%, rgba(88, 145, 103, 0)));
-      background: -webkit-linear-gradient(45deg, #589167 0%, rgba(88, 145, 103, 0) 100%);
-      background: -o-linear-gradient(45deg, #589167 0%, rgba(88, 145, 103, 0) 100%);
-      background: -ms-linear-gradient(45deg, #589167 0%, rgba(88, 145, 103, 0) 100%);
-      background: linear-gradient(45deg, #589167 0%, rgba(88, 145, 103, 0) 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#589167', endColorstr='#589167', GradientType=1 ); }
+      background: #233759;
+      background: -moz-linear-gradient(45deg, #233759 0%, rgba(88, 145, 103, 0) 100%);
+      background: -webkit-gradient(left bottom, right top, color-stop(0%, #233759), color-stop(100%, rgba(88, 145, 103, 0)));
+      background: -webkit-linear-gradient(45deg, #233759 0%, rgba(88, 145, 103, 0) 100%);
+      background: -o-linear-gradient(45deg, #233759 0%, rgba(88, 145, 103, 0) 100%);
+      background: -ms-linear-gradient(45deg, #233759 0%, rgba(88, 145, 103, 0) 100%);
+      background: linear-gradient(45deg, #233759 0%, rgba(88, 145, 103, 0) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#233759', endColorstr='#233759', GradientType=1 ); }
     .hero-wrap.hero-wrap-2 .slider-text {
       height: 400px !important; }
 
@@ -8287,7 +8287,7 @@ h1, h2, h3, h4, h5,
         bottom: 80px;
         left: 0; } }
     .slider-text .img-video span {
-      color: #589167;
+      color: #233759;
       font-size: 24px; }
   .slider-text p {
     font-size: 18px;
@@ -8416,36 +8416,36 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #589167 !important;
-    border: 1px solid #589167 !important;
+    background: #233759 !important;
+    border: 1px solid #CCAE6A !important;
     color: #fff !important; }
     .btn.btn-primary:hover {
-      border: 1px solid #589167;
+      border: 1px solid #CCAE6A;
       background: transparent;
-      color: #589167; }
+      color: #CCAE6A; }
     .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #589167;
+      border: 1px solid #CCAE6A;
       background: transparent;
-      color: #589167; }
+      color: #CCAE6A; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #589167;
+        background: #CCAE6A;
         color: #fff; }
   .btn.btn-white {
     background: #fff !important;
     border: 1px solid #fff !important;
     color: #000000 !important; }
     .btn.btn-white:hover {
-      border: 1px solid #589167;
+      border: 1px solid #CCAE6A;
       background: transparent;
-      color: #589167; }
+      color: #CCAE6A; }
     .btn.btn-white.btn-outline-white {
       border: 1px solid white !important;
       background: transparent !important;
       color: #fff !important; }
       .btn.btn-white.btn-outline-white:hover {
-        border: 1px solid #589167 !important;
-        background: #589167 !important;
+        border: 1px solid #CCAE6A !important;
+        background: #CCAE6A !important;
         color: #fff !important; }
 
 .services-wrap {
@@ -8475,7 +8475,7 @@ h1, h2, h3, h4, h5,
     .ftco-intro .intro {
       margin-top: -70px; } }
   .ftco-intro .intro.aside-stretch {
-    background: #589167; }
+    background: #233759; }
     .ftco-intro .intro.aside-stretch:after {
       position: absolute;
       top: 0;
@@ -8483,7 +8483,7 @@ h1, h2, h3, h4, h5,
       bottom: 0;
       content: '';
       width: 360%;
-      background: #589167;
+      background: #ccae6a;
       z-index: 99; }
     @media (max-width: 991.98px) {
       .ftco-intro .intro.aside-stretch:after {
@@ -8495,9 +8495,9 @@ h1, h2, h3, h4, h5,
   background: #589167;
   padding: 30px; }
   .intro.color-1 {
-    background: #528760; }
+    background: #CCAE6A; }
   .intro.color-2 {
-    background: #4e815c; }
+    background: #233759; }
   .intro .icon {
     margin-right: 20px; }
     .intro .icon span {
@@ -8534,7 +8534,7 @@ h1, h2, h3, h4, h5,
       height: 50px;
       border-radius: 50%;
       z-index: 1;
-      background: #589167;
+      background: #233759;
       border: 5px solid #fff; }
       .services-2 .icon-wrap .number span {
         font-weight: 500;
@@ -8543,7 +8543,7 @@ h1, h2, h3, h4, h5,
     width: 170px;
     height: 170px;
     border-radius: 50%;
-    background: #f5f4f0;
+    background: #ccae6a;
     margin: 0 auto;
     margin-bottom: 10px;
     position: relative;
@@ -8563,7 +8563,7 @@ h1, h2, h3, h4, h5,
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      background: #589167;
+      background: #fff;
       content: '';
       z-index: -1;
       -moz-transition: all 0.3s ease;
@@ -8583,9 +8583,9 @@ h1, h2, h3, h4, h5,
     -moz-box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15); }
     .services-2:hover .icon-wrap .number span {
-      color: #589167; }
+      color: #233759; }
   .services-2:hover .icon {
-    background: #589167;
+    background: #233759;
     -webkit-box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15); }
@@ -8604,12 +8604,12 @@ h1, h2, h3, h4, h5,
     font-size: 20px;
     line-height: 30px; }
     .tabulation .nav-pills .nav-item .nav-link span {
-      color: #589167;
+      color: #ccae6a;
       font-size: 30px; }
     .tabulation .nav-pills .nav-item .nav-link.active {
       color: #fff;
-      background: #589167;
-      border: 1px solid #589167; }
+      background: #233759;
+      border: 1px solid #ccae6a; }
       .tabulation .nav-pills .nav-item .nav-link.active span {
         color: #fff; }
 
@@ -8854,7 +8854,7 @@ textarea.form-control {
   padding-bottom: 0; }
 
 .ftco-bg-dark {
-  background: #3c312e; }
+  background: #233759; }
 
 .ftco-appointment {
   background-position: center center !important;
@@ -8868,7 +8868,7 @@ textarea.form-control {
     width: 100%;
     content: '';
     opacity: .5;
-    background: #589167; }
+    background: #233759; }
   .ftco-appointment .half {
     width: 100%; }
     .ftco-appointment .half h2 {
@@ -8928,7 +8928,7 @@ textarea.form-control {
 .ftco-footer {
   font-size: 16px;
   padding: 6em 0 0 0;
-  background: #1a1a1a;
+  background: #233759;
   color: rgba(255, 255, 255, 0.9); }
   .ftco-footer .logo a {
     position: relative; }
@@ -8955,7 +8955,7 @@ textarea.form-control {
   .ftco-footer a {
     color: #fff; }
     .ftco-footer a:hover {
-      color: #589167; }
+      color: #ccae6a; }
   .ftco-footer .ftco-heading-2 {
     font-size: 17px;
     font-weight: 400;
@@ -8970,7 +8970,7 @@ textarea.form-control {
     width: 50px;
     display: block;
     float: left;
-    background: #589167;
+    background: #fff;
     border-radius: 50%;
     position: relative; }
     .ftco-footer-social li a span {
@@ -9117,7 +9117,7 @@ textarea.form-control {
   font-size: 18px;
   display: inline-block;
   margin-bottom: 0;
-  color: #589167;
+  color: #ccae6a;
   font-size: 12px;
   font-weight: 600;
   letter-spacing: 2px;
@@ -9166,7 +9166,7 @@ textarea.form-control {
     right: 0;
     content: '';
     height: 400px;
-    background: #589167;
+    background: #233759;
     opacity: .8; }
   .testimony-section .owl-carousel {
     margin: 0; }
@@ -9228,7 +9228,7 @@ textarea.form-control {
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.1); }
       .testimony-section .owl-dots .owl-dot.active {
-        background: #589167; }
+        background: #233759; }
 
 .testimony-wrap {
   display: block;
@@ -9246,7 +9246,7 @@ textarea.form-control {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #589167; }
+    background: #ccae6a; }
     .testimony-wrap .icon span {
       color: #fff; }
   .testimony-wrap .user-img {
@@ -9320,7 +9320,7 @@ textarea.form-control {
     bottom: 0;
     content: '';
     opacity: 0;
-    background: #589167;
+    background: #ccae6a;
     z-index: -1; }
     @media (min-width: 992px) {
       .ftco-counter .overlay {
@@ -9331,7 +9331,7 @@ textarea.form-control {
   .ftco-counter .text strong.number {
     font-weight: 500;
     font-size: 40px;
-    color: #589167; }
+    color: #233759; }
   .ftco-counter .text span {
     display: block;
     font-size: 16px;
@@ -9398,7 +9398,7 @@ textarea.form-control {
       line-height: 1.2; }
       .blog-entry .meta span.day {
         font-weight: 700;
-        color: #589167;
+        color: #ccae6a;
         font-size: 30px; }
       .blog-entry .meta span.mos {
         font-size: 16px;
@@ -9406,7 +9406,7 @@ textarea.form-control {
         font-weight: 500;
         text-transform: uppercase; }
       .blog-entry .meta span.yr {
-        color: rgba(0, 0, 0, 0.2);
+        color: #fff;
         font-size: 11px; }
   .blog-entry .btn-custom {
     text-transform: uppercase;
@@ -9415,7 +9415,7 @@ textarea.form-control {
     font-weight: 600;
     letter-spacing: 2px; }
   .blog-entry:hover .meta {
-    background: #589167; }
+    background: #233759; }
     .blog-entry:hover .meta .day {
       color: #fff; }
 
@@ -9500,7 +9500,7 @@ textarea.form-control {
     width: 100%; }
 
 .contactForm .label {
-  color: #589167 !important;
+  color: #233759 !important;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 600; }
@@ -9558,7 +9558,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color: #000000; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #589167; }
+        color: #233759; }
   .block-21 .text .meta > div {
     display: inline-block;
     font-size: 14px;
