--- a/L'archerCapital/css/style.css
+++ b/L'archerCapital/css/style.css
@@ -2553,7 +2553,7 @@ ul {
   width: 100%;
   height: 890px;
   position: relative;
-  background-image: url(../img/sibscribe_bg.png);
+  background-image: url(../img/aci.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -2680,11 +2680,11 @@ ul {
 
 /* line 72, E:/171 Fitzone Fitness/171_ Fitzone_Fitness_html/sass/_banner.scss */
 .banner_part .banner_text .banner_text_iner h2 {
-  font-size: 160px;
+  font-size: 100px;
   color: #233759;
   text-transform: uppercase;
   font-weight: 700;
-  line-height: 130px;
+  line-height: 100px;
 }
 
 /* line 78, E:/171 Fitzone Fitness/171_ Fitzone_Fitness_html/sass/_banner.scss */
