--- a/Home/css/style.css
+++ b/Home/css/style.css
@@ -1292,7 +1292,7 @@ h1, h2, h3, h4, h5,
 .quote-form .btn-primary:hover {
   background: #000;
   border-color: #000;
-  color: #fff; }
+  color: #000; }
 
 .person {
   position: relative; }
