Paulcy added index
1% Done

--- a/Home/css/style.css
+++ b/Home/css/style.css
@@ -1290,7 +1290,7 @@ h1, h2, h3, h4, h5,
     color: #fff; }
 
 .quote-form .btn-primary:hover {
-  background: #000;
+  background: #CCAE6A;
   border-color: #000;
   color: #000; }
 
